# scigo

./: .dockerignore  .gitignore  .gitlint  .gitpod.Dockerfile  .gitpod.yml  .golangci-v2.yml  .golangci.yml  .goreleaser.yml  .markdownlint.yaml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE  Makefile  Makefile.proto  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  doc.go  docker-compose.ci.yml  docker-compose.yml  go.mod  go.sum  test_lightgbm.go
.github/: dependabot.yml  (+1 more)
sklearn/lightgbm/: CAPI_README.md  IMPLEMENTATION_SUMMARY.md  README.md  callbacks.go  capi.go  capi_compatibility_test.go  capi_test.go  capi_tree.go  categorical.go  categorical_test.go  check_init_score.py  check_leaf.py  compatibility_test.go  compatibility_utils.go  compatibility_utils_test.go  create_simple_model.py  cross_validation.go  cross_validation_test.go  debug_leaf_access.py  debug_test.go  doc.go  early_stopping.go  efb.go  efb_test.go  evaluation_metrics.go  evaluation_metrics_test.go  example_cv_test.go  feature_importance_test.go  gamma_tweedie_test.go  generate_compatibility_data.py  generate_precision_data.py  goss_verification_test.go  histogram_optimization.go  histogram_optimization_test.go  init_score_test.go  io_json_test.go  json_loader.go  json_loader_test.go  leaves_loader.go  leaves_predictor.go  (+49 more)
sklearn/lightgbm/api/: README.md  api_integration_test.go  booster.go  callbacks.go  dataset.go  python_comparison_test.go  train.go
(+598 files in other folders)
