[project]
name = "lightgbm-compatibility"
version = "0.1.0"
description = "LightGBM compatibility test data generation"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "matplotlib>=3.7.2",
]